content: update for default port development server and start.gethyas.com

--- a/src/content/docs/start-here/getting-started.mdx
+++ b/src/content/docs/start-here/getting-started.mdx
@@ -23,11 +23,11 @@ Check out our detailed [Why Hyas](/core-concepts/why-hyas/) breakdown to learn m
 
 ## Try Hyas in your browser
 
-Visit [templates.gethyas.com](https://templates.gethyas.com/) and choose from a variety of templates to get started. Play around with a full, working version of Hyas right in your browser!
+Visit [start.gethyas.com](https://start.gethyas.com/) and choose from a variety of templates to get started. Play around with a full, working version of Hyas right in your browser!
 
 <div style="display: flex; flex-wrap: wrap; gap: 0.5rem;">
   <Button href="https://gitpod.io/#https://github.com/gethyas/basic-starter">Launch basic template</Button>
-  <Button variant="outline" href="https://templates.gethyas.com/">View all templates →</Button>
+  <Button variant="outline" href="https://start.gethyas.com/">View all templates →</Button>
 </div>
 
 ## Start your first project
