--- a/src/content/docs/start-here/installation.mdx
+++ b/src/content/docs/start-here/installation.mdx
@@ -97,7 +97,7 @@ yarn run dev
   </TabItem>
 </Tabs>
 
-If all goes well, Hyas should now be serving your project on [http://localhost:1313/](http://localhost:1313/)!
+If all goes well, Hyas should now be serving your project on [http://localhost:3000](http://localhost:3000/)!
 
 The Hugo server will listen for live file and configuration changes in your project directory, so you will not need to restart the server as you make changes during development.
 
