--- a/src/content/docs/start-here/installation.mdx
+++ b/src/content/docs/start-here/installation.mdx
@@ -1,5 +1,5 @@
 ---
-title: Getting Started
+title: Installation
 description: A reference page in my new Starlight docs site.
 ---
 import { Tabs, TabItem } from '@astrojs/starlight/components';
