content: update start here section

--- a/src/content/docs/getting-started.mdx
+++ b/src/content/docs/getting-started.mdx
@@ -2,9 +2,9 @@
 title: Getting Started
 description: A reference page in my new Starlight docs site.
 ---
-import Button from '../../../components/Button.astro'
+import Button from '../../components/Button.astro'
 import { Tabs, TabItem } from '@astrojs/starlight/components';
-import List from '../../../components/List.astro';
+import List from '../../components/List.astro';
 
 ## What is Hyas?
 
@@ -12,14 +12,14 @@ Hyas is an **all-in-one Hugo-npm framework** for building **fast, flexible, and 
 
 ## Key features
 
-- **Hugo powered:** Fast and flexible framework for building websites.
-- **Project dependencies**: Easily install and update dependencies with [npm](https://www.npmjs.com/).
+- **Hugo powered:** A fast and flexible framework for building websites.
+- **Project dependencies**: Manage *all* your project's dependencies with npm.
 - **Production-ready**: Optimized for speed, SEO, and security.
-- **Customizable:** Build the website you want with settings and integrations.
-- **Development tools:** Check styles, scripts, and markdown for errors.
+- **Customizable:** Tailwind, Images, and other integrations to choose from.
+- **Development tools:** Find and fix problems in scripts, styles, and markdown.
 - **Deploy anywhere:** Deployment guides to different deployment services.
 
-Check out our detailed [Why Hyas](/core-concepts/why-hyas/) breakdown to learn more about what makes Hyas special. ✨
+Check out our detailed [Why Hyas](/concepts/why-hyas/) breakdown to learn more about what makes Hyas special. ✨
 
 ## Try Hyas in your browser
 
@@ -37,22 +37,25 @@ Get a new Hyas project up and running locally with our helpful `create-hyas` CLI
 <Tabs>
   <TabItem label="npm">
 ```bash
+# create a new project with npm
 npm create hyas@latest
 ```
   </TabItem>
   <TabItem label="pnpm">
 ```bash
+# create a new project with pnpm
 pnpm create hyas@latest
 ```
   </TabItem>
   <TabItem label="Yarn">
 ```bash
+# create a new project with yarn
 yarn create hyas
 ```
   </TabItem>
 </Tabs>
 
-Our [Installation Guide](/start-here/installation/) has full, step-by-step instructions for installing Hyas using our CLI wizard, creating a new project from an existing Hyas GitHub repository, and for installing Hyas manually.
+Our [Installation Guide](/install/auto/) has full, step-by-step instructions for installing Hyas using our CLI wizard, creating a new project from an existing Hyas GitHub repository, and for installing Hyas manually.
 
 ## Learn Hyas
 
@@ -72,7 +75,7 @@ See examples of some of the key concepts and patterns of a Hyas site!
 - Get inspired by visiting our [site showcase](https://gethyas.com/showcase/).
 </List>
 
-… see our [guide to using integrations](/).
+*… see our [guide to using integrations](/)*.
 
 ## Join our community
 
@@ -80,7 +83,7 @@ Join us in [Hyas Discussions](https://github.com/orgs/gethyas/discussions) to sh
 
 <List emoji="speech-balloon">
 - Say hi in [Introductions](https://github.com/orgs/gethyas/discussions/categories/introductions)!
-- Ask our Support Squad a question in [Q&A](https://github.com/orgs/gethyas/discussions/categories/q-a)!
+- Ask a question in [Q&A](https://github.com/orgs/gethyas/discussions/categories/q-a)!
 - Share what you’ve been working on in [Show and tell](https://github.com/orgs/gethyas/discussions/categories/show-and-tell)!
 </List>
 
