--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -8,7 +8,7 @@ hero:
     file: ../../assets/houston.webp
   actions:
     - text: Get Started
-      link: /start-here/getting-started/
+      link: /getting-started/
       icon: right-arrow
       variant: primary
     - text: View on GitHub
