--- a/src/content/docs/install/auto.mdx
+++ b/src/content/docs/install/auto.mdx
@@ -1,5 +1,5 @@
 ---
-title: Installation
+title: Install Hyas with the Automatic CLI
 description: A reference page in my new Starlight docs site.
 ---
 import { Tabs, TabItem } from '@astrojs/starlight/components';
@@ -8,40 +8,43 @@ import List from '../../../components/List.astro';
 Ready to install Hyas? Follow this guide to using the `create hyas` CLI to get started.
 
 :::note[Prefer to install Hyas manually?]
-Read our [step-by-step manual installation guide](/) instead.
+Read our [step-by-step manual installation guide](/install/manual/) instead.
 :::
 
 ## Prerequisites
 
-- __Node.js__ - `v16.17.0` or higher.
-- __Text editor__ - We recommend [VS Code](https://code.visualstudio.com/) with the [Hugo Language and Syntax Support](https://marketplace.visualstudio.com/items?itemName=budparr.language-hugo-vscode) extension.
-- Terminal - Hyas is accessed through its command-line interface (CLI).
+- **Node.js** - `v16.17.0` or higher.
+- **Text editor** - We recommend [VS Code](https://code.visualstudio.com/) with the [Hugo Language and Syntax Support](https://marketplace.visualstudio.com/items?itemName=budparr.language-hugo-vscode) extension.
+- **Terminal** - Hyas is accessed through its command-line interface (CLI).
 
 ## Installation
 
-`create-hyas` is the fastest way to start a new Hyas project from scratch. It will walk you through every step of setting up your new Hyas project. It allows you to choose from a few different starter templates or provide your own using the `--template` argument.
+`create-hyas` is the fastest way to start a new Hyas project from scratch. It will walk you through every step of setting up your new Hyas project. It allows you to choose from a few different official starter templates.
 
-:::tip
-Prefer to try Hyas in your browser? Visit [templates.gethyas.com](https://templates.gethyas.com/) and spin up a new Hyas project without ever leaving your browser.
+:::tip[Online previews]
+Prefer to try Hyas in your browser? Visit [start.gethyas.com](https://start.gethyas.com/) and spin up a new Hyas project without ever leaving your browser.
 :::
 
-## 1. Run the Setup Wizard
+### 1. Run the Setup Wizard
 
 Run the following command in your terminal to start our handy install wizard, `create-hyas`.
 
 <Tabs>
   <TabItem label="npm">
 ```bash
+# create a new project with npm
 npm create hyas@latest
 ```
   </TabItem>
   <TabItem label="pnpm">
 ```bash
+# create a new project with pnpm
 pnpm create hyas@latest
 ```
   </TabItem>
   <TabItem label="Yarn">
 ```bash
+# create a new project with yarn
 yarn create hyas
 ```
   </TabItem>
@@ -49,11 +52,11 @@ yarn create hyas
 
 You can run `create-hyas` anywhere on your machine, so there’s no need to create a new empty directory for your project before you begin. If you don’t have an empty directory yet for your new project, the wizard will help create one for you automatically.
 
-If all goes well, you should see a "Done" message followed by some recommended "Next steps".
+If all goes well, you should see a "Done" message followed by some "Next steps".
 
-## 2. Install dependencies
+### 2. Install dependencies
 
-`cd` into your new project directory to begin using Hyas. Install your dependencies before continuing.
+`cd` into your new project directory and install your dependencies before continuing.
 
 <Tabs>
   <TabItem label="npm">
@@ -73,7 +76,7 @@ yarn install
   </TabItem>
 </Tabs>
 
-## 3. Start Hyas ✨
+### 3. Start Hyas ✨
 
 Hyas uses the Hugo development server that has everything you need for project development. The `dev` command will start the local development server so that you can see your new website in action for the very first time.
 
@@ -97,11 +100,47 @@ yarn run dev
   </TabItem>
 </Tabs>
 
-If all goes well, Hyas should now be serving your project on [http://localhost:3000](http://localhost:3000/)!
+If all goes well, Hyas should now be serving your project on [http://localhost:1313](http://localhost:1313/)!
 
 The Hugo server will listen for live file and configuration changes in your project directory, so you will not need to restart the server as you make changes during development.
 
 If you aren't able to open your project in the browser, go back to the terminal where you ran the `dev` command and look to see if an error occurred, or if your project is being served at a different URL than the one linked to above.
+
+## Starter Templates
+
+You can also start a new Hyas project based on an [official example](https://github.com/gethyas/create-hyas#templates) by passing a `--template` argument to the `create hyas` command or by using a tool like [degit](https://github.com/Rich-Harris/degit) to scaffold your project with the `main` branch of any GitHub repository.
+
+<Tabs>
+  <TabItem label="npm">
+```bash
+# create a new project with an official example
+npm create hyas@latest -- --template <example-name>
+
+# create a new project based on a GitHub repository’s main branch
+npx degit <user/repo>
+```
+  </TabItem>
+  <TabItem label="pnpm">
+```bash
+# create a new project with an official example
+pnpm create hyas@latest --template <example-name>
+
+# create a new project based on a GitHub repository’s main branch
+pnpm dlx degit <user/repo>
+```
+  </TabItem>
+  <TabItem label="Yarn">
+```bash
+# create a new project with an official example
+yarn create hyas --template <example-name>
+
+# create a new project based on a GitHub repository’s main branch
+yarn dlx degit <user/repo>
+```
+  </TabItem>
+</Tabs>
+
+Explore our [themes and starters showcase](https://gethyas.com/themes/) where you can browse themes for blogs, portfolios, documentation, landing pages, and more! Or, [search on GitHub](https://github.com/search?o=desc&q=hyas+starter&s=stars&type=repositories) for even more starter projects.
 
 ## Next Steps
 
