ux: properly fix z-index issue

--- a/src/content/docs/getting-started.mdx
+++ b/src/content/docs/getting-started.mdx
@@ -13,7 +13,7 @@ Hyas is an **all-in-one Hugo-npm framework** for building **fast, flexible, and 
 ## Key features
 
 - **Hugo powered:** A fast and flexible framework for building websites.
-- **Project dependencies**: Manage *all* your project's dependencies with npm.
+- **Project dependencies**: Manage all your project's dependencies with npm.
 - **Production-ready**: Optimized for speed, SEO, and security.
 - **Customizable:** Tailwind, Images, and other integrations to choose from.
 - **Development tools:** Find and fix problems in scripts, styles, and markdown.
