content: update why Hyas page

--- a/src/content/docs/getting-started.mdx
+++ b/src/content/docs/getting-started.mdx
@@ -12,8 +12,8 @@ Hyas is an **all-in-one Hugo-npm framework** for building **fast, flexible, and 
 
 ## Key features
 
-- **Hugo powered:** A fast and flexible framework for building websites.
-- **Project dependencies**: Manage all your project's dependencies with npm.
+- **Hugo powered:** Fast website build times and flexible project organization.
+- **npm managed**: Straightforward and easy dependency management.
 - **Production-ready**: Optimized for speed, SEO, and security.
 - **Customizable:** Tailwind, Images, and other integrations to choose from.
 - **Development tools:** Find and fix problems in scripts, styles, and markdown.
