content: update why Hyas page

--- a/src/content/docs/concepts/why-hyas.mdx
+++ b/src/content/docs/concepts/why-hyas.mdx
@@ -20,7 +20,7 @@ Why choose Hyas over another web framework? Here are five core design principles
 
 **Hyas uses Hugo for it's fast website build times and flexible project organization.** Hyas installs Hugo locally in your project and mounts Hyas integrations and Hyas themes into Hugo's virtual filesystem.
 
-Hugo recommends to install it's binary [globally](https://gohugo.io/installation/). However, doing so, your project users could be using *different* Hugo versions ("It does not work for me?"). Hyas installs Hugo *locally* in your project making sure your project users will always use the *same* Hugo version ("It works for me!"). The latter also means that you and your project users will always use a Hugo version that *works* with (is tested for) a specific version of Hyas.
+Hugo recommends to install it's binary [globally](https://gohugo.io/installation/). However, doing so, your project users could be using *different* Hugo versions ("It does not work for me?"). Hyas installs Hugo *locally* in your project making sure your project users will always use the *same* Hugo version ("It works for me!"). A local install also guarantees that you and your project users will always use a Hugo version that *works* with (is tested for) a specific version of Hyas.
 
 :::note[How Hyas installs Hugo locally]
 Hyas uses [Hugo Installer](https://github.com/dominique-mueller/hugo-installer) to install Hugo locally in your project. 
