content: update /upgrade-to/v2/ guide

--- a/src/content/docs/getting-started.mdx
+++ b/src/content/docs/getting-started.mdx
@@ -6,9 +6,15 @@ import Button from '../../components/Button.astro'
 import { Tabs, TabItem } from '@astrojs/starlight/components';
 import List from '../../components/List.astro';
 
+
+:::tip[Hyas version 2 is here!]
+- What’s new in Hyas v2? [Find out in the announcement blog post](https://gethyas.com/blog/hyas-2/).
+- Ready to upgrade? [Follow our upgrade guide](/guides/upgrade-to/v2/).
+:::
+
 ## What is Hyas?
 
-Hyas is an **all-in-one Hugo-npm framework** for building **fast, flexible, and easy-to-use** websites.
+Hyas is an **all-in-one web framework** for building **fast, secure** websites.
 
 ## Key features
 
@@ -84,7 +90,7 @@ Join us in [Hyas Discussions](https://github.com/orgs/gethyas/discussions) to sh
 <List emoji="speech-balloon">
 - Say hi in [Introductions](https://github.com/orgs/gethyas/discussions/categories/introductions)!
 - Ask a question in [Q&A](https://github.com/orgs/gethyas/discussions/categories/q-a)!
-- Share what you’ve been working on in [Show and tell](https://github.com/orgs/gethyas/discussions/categories/show-and-tell)!
+- Share what you’ve been working on in [Showcase](https://github.com/orgs/gethyas/discussions/categories/showcase)!
 </List>
 
 ## What's new?
