content: update upgrade guide

--- a/src/content/docs/guides/upgrade-to/v2.mdx
+++ b/src/content/docs/guides/upgrade-to/v2.mdx
@@ -80,7 +80,7 @@ node-linker = hoisted
 prefer-symlinked-executables = false
 ```
 
-Next, install the latest version of Hyas and integrations of choice in your project.
+Next, install the latest version of Hyas and the recommended integrations in your project.
 
 <Tabs>
   <TabItem label="npm">
@@ -88,7 +88,7 @@ Next, install the latest version of Hyas and integrations of choice in your proj
 # Install Hyas v2.x
 npm install gethyas@latest
 
-# Example: install Bootstrap, Images, and SEO integrations
+# Recommended: install Bootstrap, Images, and SEO integrations
 npm install @hyas/bootstrap@latest @hyas/images@latest @hyas/seo@latest
 ```
   </TabItem>
@@ -97,7 +97,7 @@ npm install @hyas/bootstrap@latest @hyas/images@latest @hyas/seo@latest
 # Install Hyas v2.x
 pnpm install gethyas@latest
 
-# Example: install Bootstrap, Images, and SEO integrations
+# Recommended: install Bootstrap, Images, and SEO integrations
 pnpm install @hyas/bootstrap@latest @hyas/images@latest @hyas/seo@latest
 ```
   </TabItem>
@@ -106,7 +106,7 @@ pnpm install @hyas/bootstrap@latest @hyas/images@latest @hyas/seo@latest
 # Install Hyas v2.x
 yarn add gethyas@latest
 
-# Example: install Bootstrap, Images, and SEO integrations
+# Recommended: install Bootstrap, Images, and SEO integrations
 yarn add @hyas/bootstrap@latest @hyas/images@latest @hyas/seo@latest
 ```
   </TabItem>
@@ -120,7 +120,7 @@ But, if you notice errors or unexpected behavior, please check below for what ha
 
 ## Configuration
 
-Update your configuration files for the following integrations:
+Update your configuration files for the recommended integrations:
 
 - [Bootstrap](https://github.com/gethyas/bootstrap/blob/main/README.md)
 - [Images](https://github.com/gethyas/images/blob/main/README.md)
