content: rephrase focus Hyas

--- a/src/content/docs/concepts/why-hyas.mdx
+++ b/src/content/docs/concepts/why-hyas.mdx
@@ -4,7 +4,7 @@ description: A guide in my new Starlight docs site.
 ---
 import List from '../../../components/List.astro';
 
-Hyas is an **all-in-one Hugo-npm framework** for building **fast, flexible, and easy-to-use** websites.
+Hyas is an **all-in-one web framework** for building **fast, security-focused** websites.
 
 Why choose Hyas over another web framework? Here are five core design principles to help explain why we built Hyas, the problems that it exists to solve, and why Hyas may be the best choice for your project or team.
 
