--- a/src/content/docs/getting-started.mdx
+++ b/src/content/docs/getting-started.mdx
@@ -14,7 +14,7 @@ import List from '../../components/List.astro';
 
 ## What is Hyas?
 
-Hyas is an **all-in-one web framework** for building **fast, secure** websites.
+Hyas is an **all-in-one web framework** for building **fast, security-focused** websites.
 
 ## Key features
 
