--- a/src/content/docs/getting-started.mdx
+++ b/src/content/docs/getting-started.mdx
@@ -14,12 +14,12 @@ import List from '../../components/List.astro';
 
 ## What is Hyas?
 
-Hyas is an **all-in-one web framework** for building **fast, security-focused** websites.
+Hyas is a **Node.js web framework** for building **fast, security-focused** websites.
 
 ## Key features
 
 - **Hugo powered:** Fast website build times and flexible project organization.
-- **npm managed**: Straightforward and easy dependency management.
+- **Fully npm managed**: Straightforward and easy dependency management.
 - **Production-ready**: Optimized for speed, SEO, and security.
 - **Customizable:** Tailwind, Images, and other integrations to choose from.
 - **Development tools:** Find and fix problems in scripts, styles, and markdown.
